static/assets/css/common.css
@import url("https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100;0,300;0,400;0,800;1,100;1,300;1,400;1,800&display=swap");

:root {
  --gray-1: #3f3f3f;
  --gray-2: #32353a;
  --gray-3: #25282c;
  --gray-4: #151618;
  --gray-5: #151618;
  --gray-6: #111111;
  --white-1: #eeeeee;
  --white-2: #a9abb3;
}
* {
  font-family: inherit;
  text-decoration: none;
  margin: 0;
  padding: 0;
  -webkit-user-drag: none;
  -moz-window-dragging: none;
  -webkit-tap-highlight-color: transparent;
}
* img {
  max-width: 100%;
}
html,
body {
  color: var(--white-2);
  font-family: "JetBrains Mono", monospace;
  line-height: 2rem;
  background-color: var(--gray-5);
}
html {
  font-size: 62.5%;
  height: 100%;
}
body {
  font-size: 1.6rem;
  position: relative;
  min-height: 100%;
}

header {
  padding: 1rem 0 1rem 0;
  text-align: center;
  margin-bottom: 1rem;
}
header .site-title {
  font-size: 4rem;
  font-weight: bolder;
  line-height: 110%;
  color: var(--white-1);
}

main {
  padding: 3rem 0 6rem;
  margin: 0 auto;
  max-width: 780px;
}

.d-flex {
  display: flex;
}

.break {
  margin-left: auto;
}

.mb-1 {
  margin-bottom: 1rem;
}
.mb-2 {
  margin-bottom: 2rem;
}
.mb-3 {
  margin-bottom: 3rem;
}
.mt-1 {
  margin-top: 1rem;
}
.mt-2 {
  margin-top: 2rem;
}
.mt-3 {
  margin-top: 3rem;
}

.content a {
  color: cyan;
  border-bottom: 1px solid cyan;
}

hr {
	border-top: 2px dashed var(--white-2)!important;
	border-bottom: none!important;
	border-left: none!important;
	border-right: none!important;
	margin-bottom: 1.75rem!important;
}

/* footer */
footer {
  position: absolute;
  bottom: 1.5rem;
  left: 50%;
  transform: translateX(-50%);
  color: var(--white-2);
  white-space: nowrap;
}
footer a {
  color: var(--white-2);
  text-decoration: underline;
}

/* scrollToTop button */
.progress-wrap {
  position: fixed;
  right: 50px;
  bottom: 50px;
  height: 46px;
  width: 46px;
  cursor: pointer;
  display: block;
  border-radius: 50px;
  box-shadow: inset  0 0 0 2px rgba(255,255,255,0.2);
  z-index: 10000;
  opacity: 0;
  visibility: hidden;
  transform: translateY(15px);
  -webkit-transition: all 200ms linear;
  transition: all 200ms linear;
}

.progress-wrap.active-progress {
  opacity: 1;
  visibility: visible;
  transform: translateY(0);
}

.progress-wrap::after {
  position: absolute;
  content: '↑';
  text-align: center;
  line-height: 46px;
  font-size: 24px;
  color: #ecedf3;
  left: 0;
  top: 0;
  height: 46px;
  width: 46px;
  cursor: pointer;
  display: block;
  z-index: 1;
  -webkit-transition: all 200ms linear;
  transition: all 200ms linear;
}

.progress-wrap:hover::after {
  opacity: 0;
}

.progress-wrap::before {
  position: absolute;
  content: '↑';
  text-align: center;
  line-height: 46px;
  font-size: 24px;
  opacity: 0;
  background-image: linear-gradient(298deg, #da2c4d, #f8ab37);
  background-clip: text;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  left: 0;
  top: 0;
  height: 46px;
  width: 46px;
  cursor: pointer;
  display: block;
  z-index: 2;
  -webkit-transition: all 200ms linear;
  transition: all 200ms linear;
}

.progress-wrap:hover::before {
  opacity: 1;
}

.progress-wrap svg path { 
  fill: none; 
}

.progress-wrap svg.progress-circle path {
  stroke: #ecedf3;
  stroke-width: 4;
  box-sizing:border-box;
  -webkit-transition: all 200ms linear;
  transition: all 200ms linear;
}

/* breadcrumbs */
#breadcrumbs {
  list-style: none;
  display: flex;
  position: relative;
}
#breadcrumbs > li {
  position: relative;
}
#breadcrumbs > li:not(:first-child) {
  margin-left: 30px;
}
#breadcrumbs > li:not(:first-child):before {
  content: "»";
  position: absolute;
  left: -18px;
}
#breadcrumbs > li:last-child a {
  pointer-events: none;
  opacity: 0.4;
}
#breadcrumbs a {
  color: var(--white-1);
}

button {
  color: #272822;
  background-color: #FFF;
  border-color: #272822;
  border: 2px solid;
  border-radius: 3px;
  padding: 3px 8px;
  font-size: 0.8em;
  transition: all 0.3s;
}
button:hover {
  cursor: pointer;
  background-color: #F2F2F2;
}
button:focus {
  background-color: #E6E6E6;
  outline: 0;
}

/* search form */
#search input {
  color: #272822;
  background-color: #FFF;
  border-color: #272822;
  border: 2px solid;
  border-radius: 3px;
  padding: 3px 8px;
  font-size: 0.8em;
}
#search input:focus {
  outline: none;
}

@media screen and (max-width: 750px) {
  main {
    padding: 1rem 0 6rem;
  }
}

